--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
                             <limit>
                                 <counter>COMPLEXITY</counter>
                                 <value>COVEREDRATIO</value>
-                                <!-- 85% -->
+                                <!-- Copertura 85% -->
                                 <minimum>0.85</minimum>
                             </limit>
                         </limits>
