--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <!-- JUnit 5 -->
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
