--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -16,16 +8,59 @@ on:
 
 jobs:
   build:
-
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+
+    - name: Build and run Checkstyle
+      run: |
+        mkdir -p temp
+        mvn clean verify checkstyle:checkstyle | tee temp/build.log
+
+    - name: Create build summary and update README.md
+      run: |
+        mkdir -p temp
+        echo "### Report sul processo di build" > temp/summary.md
+        echo "[![Java CI with Maven](https://github.com/BigBuckBunny12/Progetto-MTSS-2/actions/workflows/maven.yml/badge.svg)](https://github.com/BigBuckBunny12/Progetto-MTSS-2/actions/workflows/maven.yml)" >> temp/summary.md
+        echo "Log processo di build Maven (ultime 60 righe):" >> temp/summary.md
+        echo '```' >> temp/summary.md
+        tail -n 60 temp/build.log >> temp/summary.md
+        echo '```' >> temp/summary.md
+        echo -e "\nViolazioni di stile (Checkstyle):" >> temp/summary.md
+        CHECKSTYLE_ERRORS=$(grep -o 'severity="error"' target/checkstyle-result.xml | wc -l)
+        echo "Errori rilevati: $CHECKSTYLE_ERRORS" >> temp/summary.md
+
+        HEADER="////////////////////////////////////////////////////////////////////<br />\n"
+        HEADER+="// [GABRIELE] [SCAGGIANTE] [2101076]<br />\n"
+        HEADER+="// [ANDREA] [LONARDI] [2113199]<br />\n"
+        HEADER+="////////////////////////////////////////////////////////////////////<br />\n"
+
+        REPORT=$(cat temp/summary.md)
+        echo -n "" > README.md
+        echo -e "$HEADER\n\n<!-- START BUILD INFO -->\n$REPORT\n<!-- END BUILD INFO -->" >> README.md
+
+    - name: Commit updated README.md if changed
+      run: |
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@github.com"
+        git fetch
+        git checkout ${{ github.head_ref || github.ref_name }}
+
+        if git diff --quiet README.md; then
+          echo "README.md non è cambiato. Nessun commit necessario."
+        else
+          git add README.md
+          git commit -m "README.md aggiornato con i risultati di build"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.head_ref || github.ref_name }}
+        fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
